@@ -1,4 +1,5 @@
 5.0a4 -> 5.0b1:
+    - rse: provide --with-name=NAME Autoconf option to allow packagers to "brand" RPM
     - rse: apply all remaining OpenPKG patches -- fully disabled by default under defined(RPM_VENDOR_OPENPKG)
     - jbj: flesh out rpmssl implementation. DSA seems OK, no clue RSA yet.
     - jbj: flesh out rpmgc implementation. stil buggy ...
